trunk/Archive2/00/5dd81b271b50b8/output
main.cpp: In function 'int main()':
main.cpp:56:3: error: could not convert template argument 'flop::mul<f1, f2>::value<fourAndAHalf, five>' to 'float (&)()'
   >::value()
   ^
main.cpp:57:2: error: template argument 1 is invalid
  >::value << '\n';
  ^
